--- a/css/style.css
+++ b/css/style.css
@@ -1,187 +1,244 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 body {
-  align-items: center;
-  justify-content: center;
-  font-family: 'Open Sans', 'Lato',  'Raleway', sans-serif;
-  background: linear-gradient(to top right, #5139cf, #46baca);
-  overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    font-family: Cereal, sans-serif;
+    background: linear-gradient(to top right, #5139cf, #46baca);
+    overflow: hidden;
 }
+
 .onboard {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
-  height: 100vh;
-  max-width: 500px;
-  margin: 0 auto;
-  background: #fff;
-  border-radius: 0;
-  flex-direction: column;
-  flex: 0 0 auto;
-  font-size: 14px;
-  overflow: hidden;
-  position: relative;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
+    height: 100vh;
+    max-width: 500px;
+    margin: 0 auto;
+    background: #fff;
+    border-radius: 0;
+    flex-direction: column;
+    flex: 0 0 auto;
+    font-size: 14px;
+    overflow: hidden;
+    position: relative;
 }
+
 .onboard .onboard-body {
-  margin-top: 50px;
-  align-items: center;
-  display: flex;
-  flex: 1;
-  text-align: center;
-  height: 80%;
-  padding: 32px;
+    align-items: center;
+    display: flex;
+    flex: 1;
+    text-align: center;
+    height: 87%;
 }
 
 .onboard .onboard-body .slider {
-  flex: 1;
-  align-self: stretch;
-  position: relative;
-  padding: 0;
-  order: 2;
-  display: flex;
-  justify-content: center;
+    flex: 1;
+    align-self: stretch;
+    position: relative;
+    padding: 0;
+    order: 2;
+    justify-content: center;
 }
-.onboard .onboard-body .slider .slide {
-  position: absolute;
-}
+
 .onboard .onboard-body h3 {
-  font-size: 22px;
-  line-height: 1.4em;
-  text-transform: uppercase;
-  letter-spacing: 0.15em;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.4em;
+    margin-bottom: 8px;
 }
+
 .onboard .onboard-body p {
-  line-height: 1.6em;
-  font-size: 16px;
-  margin-top: 16px;
-  padding-top: 0;
+    line-height: 1.6em;
+    font-size: 16px;
+    margin-top: 16px;
+    padding-top: 0;
+    text-align: justify;
 }
-.onboard .slider {
-  margin: 0;
-}
+
 .onboard .slider .slide {
-  opacity: 0;
-  position: absolute;
-  transform: translateX(-72px);
-  transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    opacity: 0;
+    position: absolute;
+    transform: translateX(-72px);
+    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    padding-top: 48px;
 }
+
 .onboard .slider .slide.active {
-  opacity: 1;
-  transform: translateX(0) scale(1);
-  transition-delay: 0.4s;
+    opacity: 1;
+    transform: translateX(0) scale(1);
+    transition-delay: 0.4s;
 }
-.onboard .slider .slide.active ~ .slide {
-  opacity: 0;
-  transform: translateX(72px);
+
+.onboard .slider .slide.active~.slide {
+    opacity: 0;
+    transform: translateX(72px);
 }
+
 .onboard .onboard-pagination {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin: 24px 0;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: 24px 0;
 }
+
 .onboard .onboard-pagination .dot {
-  background: rgba(0, 0, 0, 0.25);
-  border-radius: 8px;
-  height: 8px;
-  margin: 0 4px;
-  transform: scale(0.75);
-  transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  width: 8px;
+    background: rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    height: 8px;
+    margin: 0 4px;
+    transform: scale(0.75);
+    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    width: 8px;
 }
+
 .onboard .onboard-pagination .dot.active {
-  background: #5da3f2;
-  transform: scale(1);
-  transition-delay: 0.4s;
+    background: #5da3f2;
+    transform: scale(1);
+    transition-delay: 0.4s;
 }
+
 .onboard .onboard-footer {
-  display: flex;
-  flex: 0 0 auto;
-  justify-content: space-around;
-  padding: 0;
+    display: flex;
+    flex: 0 0 auto;
+    justify-content: space-around;
+    padding: 0;
 }
+
 .onboard .onboard-footer button {
-  height: 40px;
-  border: 0;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.15em;
-  border-radius: 0;
-  flex: 1;
-  font-size: 12px;
-  margin: 0;
-  outline: 0;
-  padding: 12px;
-  transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  cursor: pointer;
+    height: 40px;
+    border: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+    border-radius: 0;
+    flex: 1;
+    font-size: 12px;
+    margin: 0;
+    outline: 0;
+    padding: 12px;
+    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    cursor: pointer;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
 }
+
 .onboard .onboard-footer button:hover {
-  background: #6babf3;
+    background: #6babf3;
 }
+
 .onboard .onboard-footer button:active {
-  background: #5da3f2;
+    background: #5da3f2;
 }
+
 .onboard .onboard-footer button:disabled {
-  cursor: pointer;
+    cursor: pointer;
 }
+
 .onboard .onboard-footer button.finish {
-  background: #3e94f5;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  opacity: 0;
-  transform: scale(0, 1);
-  transform-origin: center;
-  transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    background: #3e94f5;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transform: scale(0, 1);
+    transform-origin: center;
+    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+
 .onboard .onboard-footer button.finish:hover {
-  background: #4d9cf6;
+    background: #4d9cf6;
 }
+
 .onboard .onboard-footer button.finish:active {
-  background: #3e94f5;
+    background: #3e94f5;
 }
+
 .onboard .onboard-footer button.finish.active {
-  transform: scale(1, 1);
-  opacity: 1;
+    transform: scale(1, 1);
+    opacity: 1;
 }
+
 .onboard .btn-close {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
-  cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    border: 0;
+    padding: 0;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+
+/** Slides **/
+
+.slide .slide-image {
+    margin-bottom: 24px;
+}
+
+.slide .slide-image img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 14px;
+    margin: 0 auto;
 }
 
 
 /** COLORS **/
 
 .text-gray {
-  color: #6b6f82;
+    color: #6b6f82;
 }
 
 .text-blue {
-  color: #5da3f2;
+    color: #5da3f2;
 }
 
 .text-white {
-  color: #FFF
+    color: #FFF
 }
 
 .bg-gray {
-  background-color: #6b6f82;
+    background-color: #6b6f82;
 }
 
 .bg-blue {
-  background-color: #5da3f2;
+    background-color: #5da3f2;
 }
 
 .bg-white {
-  background-color: #FFF;
+    background-color: #FFF;
 }
 
+.container {
+    max-width: 1640px;
+    margin: 0 auto;
+    padding-right: 40px;
+    padding-left: 40px;
+}
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -12px;
+    margin-left: -12px;
+}
 
+.col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    padding-right: 12px;
+    padding-left: 12px;
+}
 
+@media (max-width: 990px) {
+    .container {
+        padding-right: 24px;
+        padding-left: 24px;
+    }
+}
